# emergency-mail

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Readme.md  installation.md  test.yaml  trials.py
.github/: dependabot.yml
.github/workflows/: rust.yml
ci/: build_and_test.bat  build_and_test.sh
doc/: project_scope_statement.tex
examples/: config.yaml  config_full.yaml  config_runtests.yaml  emergency_bgebg.txt  emergency_bgebg_asciiescaped.txt  emergency_many_units.txt  emergency_obj.txt  emergency_r1n1f.txt  emergency_simple.txt
src/: config.rs  connection.rs  main.rs  models.rs  printing.rs  winprio.rs
src/config/: config.rs  configTests.rs  config_tests.rs  logging.rs  logging.yaml
src/connection/: imap.rs  imap_multipart.rs  message.rs  tests.rs
src/connection/tests/: fetch_mock.rs  test_get_message_body.rs
src/models/: Builder.rs  Emergency.rs  EmergencyTest.rs  RadioIdentifier.rs  either.rs  emergency.rs  emergency_parsing.rs  emergency_test.rs  radio_identifier.rs  recoverable.rs  unit_alarm_time.rs
src/printing/: com.rs  document.rs  pdf.rs  print_ems.rs  print_ems_tests.rs  print_xps.rs  xps.rs  xps_document.rs  xps_helper.rs  xps_page.rs
src/printing/pdf/: document.rs  helper.rs  page.rs  print_pdf.rs
src/printing/xps/: document.rs  helper.rs  page.rs  print.rs
