[package]
name = "emergency_mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
native-tls = "0.2.11"
imap = "3.0.0-alpha.10"
chrono = "0.4.26"
log = "0.4.19"
log4rs = "1.2.0"
genpdf = "0.2.0"
no-panic = "0.1"