[package]
name = "emergency_mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
native-tls = "0.2.11"
imap = "3.0.0-alpha.11"
chrono = "0.4.26"
log = "0.4.20"
log4rs = "1.2.0"
no-panic = "0.1"

[dependencies.printpdf]
version = "0.5.3"
features = ["embedded_images"]

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_System_Com",
    "Win32_Storage_Xps_Printing",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_Packaging_Opc",
    "Win32_System_Com_Events",
]

[dev-dependencies]
mockall = "0.11.4"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"